--- a/nginx-configuration.conf
+++ b/nginx-configuration.conf
@@ -26,7 +26,7 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
-    #custom part for adding desired html pages.
+    #only server part is customized part for adding desired html pages. Rest of the file is cited from default nginx config file.
     server {
          listen       80;
          listen  [::]:80;
@@ -34,7 +34,7 @@ http {
 
         location / {
             root   /usr/share/nginx/html;
-            index  home.html;  #name of your main html page
+            index  home.html;  #name of your main html page. Name you landing page as required. e.g. home.html.
           }
   }
 }
